--- a/ex html css/index.html
+++ b/ex html css/index.html
@@ -11,7 +11,7 @@
         <h1>Profil Utilusateur</h1>
     </header>
     <main>
-        <section id="profil">
+        <section id="container">
             <h2 >Informations de Profil</h2>
             <picture class="photo">
                 <img src="profil.png" alt="Photo de profil">
@@ -23,9 +23,9 @@
             </ul>
         </section>
 
-        <section id="contacter">
+        <section id="container">
             <h2>Contacter moi</h2>
-            <form action="post">
+            <form action="post" class="formulaire">
                 <label for="nom">Nom</label>
                 <input type="text" id="nom" name="nom" placeholder="Entrez votre nom">
 
@@ -44,12 +44,12 @@
 
             </form>
         </section>
-        <section id="hobbies">
+        <section id="container">
             <h2 class="titre">Mes Hobbies</h2>
             <ul class="hobbies">
-                <li class="items items-1">Lecture</li>
-                <li class="items items-2">Voyages</li>
-                <li class="items items-3">Programation</li>
+                <li >Lecture</li>
+                <li >Voyages</li>
+                <li >Programation</li>
             </ul>
         </section>   
     </main>
