--- a/ex html css/index.html
+++ b/ex html css/index.html
@@ -10,29 +10,29 @@
     <header>
         <h1>Profil Utilusateur</h1>
     </header>
-    <main>
-        <section id="container">
+    <main class="main">
+        <section class="section">
             <h2 >Informations de Profil</h2>
             <picture class="photo">
-                <img src="profil.png" alt="Photo de profil">
+                <img src="free-nature-images.jpg" alt="Photo de profil">
             </picture>
-            <ul>
-                <li class="items items-1">Nom : Utilusateur</li>
-                <li class="items items-2">Age : 20</li>
-                <li class="items items-3">Occupation :Développeur Web</li>
+            <ul class="profil">
+                <li class="items items-1"><strong>Nom :</strong> Utilusateur</li>
+                <li class="items items-2"><strong>Age :</strong> 20</li>
+                <li class="items items-3"><strong>Occupation :</strong>Développeur Web</li>
             </ul>
         </section>
 
-        <section id="container">
+        <section class="section">
             <h2>Contacter moi</h2>
             <form action="post" class="formulaire">
-                <label for="nom">Nom</label>
+                <label for="nom">Nom:</label>
                 <input type="text" id="nom" name="nom" placeholder="Entrez votre nom">
 
-                <label for="email">Email</label>
+                <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Entrez votre email">
 
-                <label for="raison" class="raison">Raison</label>
+                <label for="raison" class="raison">Raison:</label>
                 <select name="raison" id="raison">
                     <option value="question">Question</option>
                     <option value="probleme">Probleme</option>
@@ -44,7 +44,7 @@
 
             </form>
         </section>
-        <section id="container">
+        <section class="section">
             <h2 class="titre">Mes Hobbies</h2>
             <ul class="hobbies">
                 <li >Lecture</li>
