--- a/ex html css/index.html
+++ b/ex html css/index.html
@@ -47,9 +47,9 @@
         <section class="section">
             <h2 class="titre">Mes Hobbies</h2>
             <ul class="hobbies">
-                <li >Lecture</li>
-                <li >Voyages</li>
-                <li >Programation</li>
+                <li  class="block">Lecture</li>
+                <li  class="block">Voyages</li>
+                <li  class="block" >Programation</li>
             </ul>
         </section>   
     </main>
